--- a/Web/index.html
+++ b/Web/index.html
@@ -6,7 +6,6 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src = "js/languages.js"></script>
     <script src = "js/strings.js"></script>
-    <script src = "js/startpage.js"></script>
     <script src = "js/controlRobot.js"></script>
 
 
@@ -17,9 +16,9 @@
 <div id="flagContainer"></div>
 <div id="remoteContainer">
     <button id="forward_button"  data-translatable_string="forward_string" class="moveButton translatable">Forward </button>
-    <button id="backward_button" data-translable_string="back_string" class="move Button translateable"> Back</button>
-    <button id="left_button" data-translatable_string="left_string" class="move Button translateable"> Left</button>
-    <button id="right_button" data-translatable_string="right_string" class="move Button translateable"> Right</button>
+    <button id="backward_button" data-translable_string="back_string" class="move Button translatable"> Back</button>
+    <button id="left_button" data-translatable_string="left_string" class="move Button translatable"> Left</button>
+    <button id="right_button" data-translatable_string="right_string" class="move Button translatable"> Right</button>
 </div>
 
 </body>
